# OpenGames

./: .gitignore  game.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: commit-standards.yml  scope-check.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: README.md  agent-file-template.md  checklist-template.md  constitution-template.md  plan-template.md  project-context.md  project-structure-reference.md  spec-template-client-backend.md  spec-template-client-frontend.md  spec-template-server.md  spec-template.md  tasks-template.md  testing-strategy.md
Kimi_Agent_SpecKit/: EXECUTIVE_SUMMARY.md  architecture-diagram.mmd  evolution-roadmap.md  network-code-examples.ts  project-requirements.md  project-structure.md  quick-reference.md  web-game-platform-architecture.md  web-game-platform-monitoring.md  web-game-platform-tech-stack-analysis.md
Kimi_Agent_SpecKit/agents/: README.md  agent-client-backend.md  agent-documentation.md  agent-infrastructure.md  agent-server.md
Kimi_Agent_SpecKit/security-configs/: QUICKSTART.md  deploy.sh
agents/: README.md  agent-client-frontend.md  agent-testing.md  constitution.md
blueprint/: EXECUTIVE_SUMMARY.md  README.md  SECURITY_ARCHITECTURE_SUMMARY.md  architecture-diagram.mmd  evolution-roadmap.md  project-requirements.md  project-structure.md  quick-reference.md  web-game-platform-client-container.md  web-game-platform-infrastructure-design.md  web-game-platform-network-architecture.md  web-game-platform-security-architecture.md  完整技术架构解决方案.md
blueprint/security-configs/: .env.example  docker-compose.security.yml
docs/: documentation-guidelines.md
docs/frontend/: component-guidelines.md  tauri-multi-window-implementation.md  theme-guidelines.md
report/: audit-report-2026-04-06-fixed.md
src/: App.vue  game-main.ts  main.ts
src-server/: Cargo.toml
src-server/config/: development.toml  production.toml
src-server/crates/og-api/: Cargo.toml
src-server/crates/og-api/src/: main.rs  tests.rs
src-server/crates/og-api/src/logging/: mod.rs
src-server/crates/og-api/src/routes/: game.rs
src-server/crates/og-core/: Cargo.toml
src-server/crates/og-core/src/: config.rs  error.rs  lib.rs  models.rs
src-server/crates/og-core/src/ports/: game_repository.rs
src-server/crates/og-infra/: Cargo.toml
src-server/crates/og-infra/src/: lib.rs
src-server/crates/og-infra/src/repository/: mod.rs  pg_game_repository.rs
src-server/crates/og-service/: Cargo.toml
src-server/crates/og-service/src/: game_service.rs
src-server/migrations/: 20250413180000_init.sql
src-tauri/: Cargo.toml  tauri.conf.json
(+64 files in other folders)
