[package]
name = "og-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "og-api"
path = "src/main.rs"

[dependencies]
og-core = { path = "../og-core", features = ["axum"] }
og-service = { path = "../og-service" }
og-infra = { path = "../og-infra" }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1"
config = { workspace = true }
validator = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
mockall = "0.14"
og-core = { path = "../og-core", features = ["test-utils"] }
