[package]
name = "og-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, optional = true }
sqlx = { workspace = true }
mockall = { version = "0.14", optional = true }

[features]
default = []
axum = ["dep:axum"]
test-utils = ["dep:mockall"]
